stop flickering of elements on load

--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ h3 {
 	width: 42.5%;
 	margin-left: 5%;
 	margin-top: 80px;
+	visibility: hidden;
 }
 
 .clear {
